--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,16 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -74,6 +84,7 @@
                     <configuration>
                         <port>8090</port>
                         <path>/</path>
+                        <contextFile>${project.basedir}/src/main/webapp/META-INF/context.xml</contextFile>
                     </configuration>
                 </plugin>
             </plugins>
