--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,10 @@
 # Уровень логирования
 log4j.rootLogger=INFO, file
+
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+
 # Апендер для работы с файлами
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 # Путь где будет создаваться лог файл
