--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
                     <artifactId>tomcat7-maven-plugin</artifactId>
                     <version>2.2</version>
                     <configuration>
+                        <uriEncoding>UTF-8</uriEncoding>
                         <port>8090</port>
                         <path>/</path>
                         <contextFile>${project.basedir}/src/main/webapp/META-INF/context.xml</contextFile>
