--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,16 +1,11 @@
-# Уровень логирования
-log4j.rootLogger=INFO, file
+log4j.rootLogger = TRACE, console, file
 
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Target=System.out
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console = org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout = org.apache.log4j.EnhancedPatternLayout
+log4j.appender.console.layout.ConversionPattern = [%5p] %14c{1}(%M):%3L - %m%n
 
-# Апендер для работы с файлами
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-# Путь где будет создаваться лог файл
-log4j.appender.file.File=C:\\TMP\\log_file.log
-# Указываем максимальный размер файла с логами
-log4j.appender.file.MaxFileSize=1MB
-# Конфигурируем шаблон вывода логов в файл
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.DatePattern = '.'yyyy-MM-dd'.txt'
+log4j.appender.file.File = ${catalina.home}/logs/logs.log
+log4j.appender.file.layout = org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm} [%5p] %25c{1}:%6L - %m%n
